# Pixelate

./: .gitignore  CMakeLists.txt  DrawingWindow.cpp  MainWindow.cpp  README.md  Singleton.cpp  main.cpp
include/: DrawingWindow.h  MainWindow.h
ui/: #newUI.glade#  appUI.glade  newUI.glade  newUI.glade~
